# clawbuddy

./: .gitignore  CLAUDE.md  README.md  ea-engagement.tmpl  invite.tmpl  onboard.tmpl  pyproject.toml  readme.md
.beads/: issues.jsonl
.github/workflows/: publish.yml
docs/: demo.md
presets/: inner-circle.tmpl  one-time.tmpl  safe-acquaintance.tmpl  trusted-colleague.tmpl
src/clawbuddy/: __init__.py  __main__.py  cli.py  config.py  crypto.py  mailbox.py  schema.py  send.py  version_check.py
tests/: test_cli.py  test_config.py  test_crypto.py  test_integration.py  test_mailbox.py  test_schema.py  test_send.py
worker/: wrangler.jsonc.example
worker/src/: index.js
